@@ -1,3 +1,8 @@
+2009-10-27  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/41842
+	* gcc.dg/pr41842.c: New test.
+
 2009-10-27  Revital Eres  <eres@il.ibm.com>
 
 	PR tree-optimization/40648
